--- a/website/style.css
+++ b/website/style.css
@@ -1,26 +1,35 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background: #fffff8;
   font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 }
 
 #app {
-  display: grid;
-  grid-auto-rows: minmax(150px, auto);
-  /* grid-template-columns:  */
+  display: flex;
+  flex-wrap: wrap;
   height: 100vh;
   background: #f23557;
   color: #f0d43a;
   justify-content: center;
-  grid-gap: 1em;
   font-size: 20px;
   font-family: 'Oswald', sans-serif;
+  width: 50vw;
+  margin: 0 auto;
+  padding: 10px;
 }
 
 .holder {
+  width: 100%;
 }
 
 .entry {
   background: rgba(59, 74, 107, 0.4);
+  padding: 5px;
 }
 
 #entryHolder {
@@ -49,16 +58,17 @@ label {
 input {
   display: block;
   height: 60px;
-  width: 320px;
+  width: 100%;
   background: #22b2da;
   color: #f0d43a;
   font-size: 20px;
   font-family: 'Oswald', sans-serif;
   border: none;
+  padding: 5px;
 }
 
 button {
-  width: 400px;
+  width: 100%;
   height: 100px;
   background: #3b4a6b;
   color: #f0d43a;
@@ -66,6 +76,8 @@ button {
   font-family: 'Oswald', sans-serif;
   border: none;
   box-shadow: 2px 4px 5px #444;
+  display: block;
+  cursor: pointer;
 }
 h1 {
   font-size: 36px;
@@ -76,6 +88,9 @@ textarea {
   color: #f0d43a;
   font-size: 20px;
   font-family: 'Oswald', sans-serif;
+  width: 100%;
+  padding: 5px;
+  resize: none;
 }
 /* Reset style for HTML element on active to have no border*/
 input:focus,
