--- a/website/style.css
+++ b/website/style.css
@@ -17,7 +17,7 @@ body {
   color: #f0d43a;
   justify-content: center;
   font-size: 20px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   width: 50vw;
   margin: 0 auto;
   padding: 10px;
@@ -62,18 +62,17 @@ input {
   background: #22b2da;
   color: #f0d43a;
   font-size: 20px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   border: none;
   padding: 5px;
 }
 
 button {
   width: 100%;
-  height: 100px;
   background: #3b4a6b;
   color: #f0d43a;
   font-size: 26px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   border: none;
   box-shadow: 2px 4px 5px #444;
   display: block;
@@ -87,7 +86,7 @@ textarea {
   background: #22b2da;
   color: #f0d43a;
   font-size: 20px;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   width: 100%;
   padding: 5px;
   resize: none;
@@ -103,17 +102,17 @@ button:focus {
 ::placeholder {
   /* Firefox, Chrome, Opera */
   color: #f0d43a;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: #f0d43a;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
   color: #f0d43a;
-  font-family: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
 }
