--- a/website/style.css
+++ b/website/style.css
@@ -16,10 +16,11 @@ body {
   background: #f23557;
   color: #f0d43a;
   justify-content: center;
+  align-items: flex-start;
   font-size: 20px;
   font-family: "Oswald", sans-serif;
-  width: 50vw;
-  margin: 0 auto;
+  width: 320px;
+  /* margin: 0 auto; */
   padding: 10px;
 }
 
@@ -32,23 +33,6 @@ body {
   padding: 5px;
 }
 
-#entryHolder {
-}
-
-#date {
-}
-
-#temp {
-}
-
-#content {
-}
-
-.headline {
-}
-.title {
-}
-
 /*  Basic Styling To Override Default For Basic HTML Elements */
 label {
   display: block;
@@ -57,7 +41,6 @@ label {
 
 input {
   display: block;
-  height: 60px;
   width: 100%;
   background: #22b2da;
   color: #f0d43a;
@@ -78,6 +61,7 @@ button {
   display: block;
   cursor: pointer;
 }
+
 h1 {
   font-size: 36px;
 }
@@ -90,7 +74,9 @@ textarea {
   width: 100%;
   padding: 5px;
   resize: none;
+  max-height: 200px;
 }
+
 /* Reset style for HTML element on active to have no border*/
 input:focus,
 select:focus,
@@ -98,6 +84,7 @@ textarea:focus,
 button:focus {
   outline: none;
 }
+
 /* Style for Placeholder Text*/
 ::placeholder {
   /* Firefox, Chrome, Opera */
