--- a/website/style.css
+++ b/website/style.css
@@ -16,11 +16,10 @@ body {
   background: #f23557;
   color: #f0d43a;
   justify-content: center;
-  align-items: flex-start;
+  /* align-items: flex-start; */
   font-size: 20px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   width: 320px;
-  /* margin: 0 auto; */
   padding: 10px;
 }
 
@@ -45,7 +44,7 @@ input {
   background: #22b2da;
   color: #f0d43a;
   font-size: 20px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   border: none;
   padding: 5px;
 }
@@ -55,7 +54,7 @@ button {
   background: #3b4a6b;
   color: #f0d43a;
   font-size: 26px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   border: none;
   box-shadow: 2px 4px 5px #444;
   display: block;
@@ -70,7 +69,7 @@ textarea {
   background: #22b2da;
   color: #f0d43a;
   font-size: 20px;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
   width: 100%;
   padding: 5px;
   resize: none;
@@ -89,17 +88,17 @@ button:focus {
 ::placeholder {
   /* Firefox, Chrome, Opera */
   color: #f0d43a;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 :-ms-input-placeholder {
   /* Internet Explorer 10-11 */
   color: #f0d43a;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
 
 ::-ms-input-placeholder {
   /* Microsoft Edge */
   color: #f0d43a;
-  font-family: "Oswald", sans-serif;
+  font-family: 'Oswald', sans-serif;
 }
